@@ -17,6 +17,12 @@ else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 Changes for CVS:
 
+Do not merge renamed items with differing custom names.
+---
+common/object.c: In can_merge() check for differing custom_name field.
+server/c_object.c: In command_rename_item() try to merge the affected item.
+Andreas Kirschbaum 2006-06-02
+
 Do not merge locked and unlocked items.
 ---
 common/object.c: In can_merge() do not ignore FLAG_INV_LOCKED anymore.
